Se ajusta la funcionalidad de guardar paciente